[package]
name = "saas-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "saas-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
jsonwebtoken = "9"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
service-api = { path = "../service-api" }
runtime = { path = "../runtime" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"

[lints]
workspace = true

